--- a/vars/env.example.yml
+++ b/vars/env.example.yml
@@ -2,7 +2,7 @@
 # eg:- 5.7, 5.8
 mysql_version:
 # eg:- 7.1, 7.2, 7.3, 7.4
-php_version: 7.3
+php_version:
 
 # http variables
 # document root for the app (must be your project folder)
