--- a/playbook.yml
+++ b/playbook.yml
@@ -3,7 +3,8 @@
   vars_files:
     - vars/env.yml
   tasks:
-    #    Installing services
+    #! Installing services
+    #? Install apache
     - name: Install httpd
       homebrew:
         name: httpd
@@ -11,6 +12,9 @@
         update_homebrew: true
       tags:
         - httpd
+
+
+    # ? install MYSQL
     - name: Install Mysql
       homebrew:
         name: mysql@{{ mysql_version }}
@@ -18,6 +22,9 @@
         update_homebrew: true
       tags:
         - mysql
+
+
+    #? install PHP 
     - name: Install PHP
       homebrew:
         name: php@{{ php_version }}
@@ -25,44 +32,80 @@
         update_homebrew: true
       tags:
         - PHP
+
+
+    #? install phpmyadmin 
+    - name: Install phpmyadmin
+      homebrew: 
+        name: phpmyadmin
+        state: present
+        update_homebrew: true
+
+    #? removing the default conf file
     - name: deleting httpd.conf from  /usr/local/etc/httpd/httpd.conf
       file:
         path: "/usr/local/etc/httpd/httpd.conf"
         state: absent
+
+    #? adding custom conf file
     - name: Adding our httpd.conf to /usr/local/etc/httpd/httpd.conf
       template:
         src: "files/httpd.conf.j2"
         dest: "/usr/local/etc/httpd/httpd.conf"
+    
+
+    #? cecking if the log file exists
+    - name: Checking if log file exists
+      stat:
+        path: "/var/log/apache2/error_log"
+      register: error_file
+    
+     #? cecking if the log file exists
+    - name: Checking if log file exists
+      stat:
+        path: "/var/log/apache2/access_log"
+      register: access_file
+
+    #? changing permission of the log file
     - name: change permission of the log file
       become: yes
       file:
         path: "/var/log/apache2/error_log"
         mode: 0777
+      when: error_file.stat.exists == true
+
+    #? Changing permission of the log file
     - name: change permission of the log file
       become: true
       file:
           path: "/var/log/apache2/access_log"
           mode: 0777
+      when: access_file.stat.exists == true
 
-    #    create profile file for mac zshrc
+
+    #?create profile file for mac zshrc
     - name: Create zshrc for user
       file:
         path: "/Users/{{ username }}/.zshrc"
         state: touch
-    #    configuring path for our services
+
+
+    #! configuring path for our services
     - name: configure mysql path
       lineinfile:
         path: "/Users/{{ username }}/.zshrc"
         line: 'export PATH="/usr/local/opt/mysql@{{ mysql_version }}/bin:$PATH"'
+
     - name: configuring php path
       lineinfile:
         path: "/Users/{{ username }}/.zshrc"
         line: 'export PATH="/usr/local/opt/php@7.3/bin:$PATH"'
+
     - name: congiguring sbin for php
       lineinfile:
         path: "/Users/{{ username }}/.zshrc"
         line: 'export PATH="/usr/local/opt/php@7.3/sbin:$PATH"'
-
+    # ! Reload zshrc
     - name: provsioning script to restart and start the services
       copy:
         src: "services.sh"
@@ -70,13 +113,13 @@
         mode: 0777
     - name: running the script
       command: sh /Users/{{ username }}/services.sh
-      #    Configuring services
-      #  httpd configurations
+      
+    #!  httpd configurations
     - name: create direcroty for virtual hosts
       file:
         path: "/usr/local/etc/httpd/extra/sites-available"
         state: directory
-
+    #? Create document root 
     - name: create document root  for demo  host
       file:
         path: "{{ document_root }}/demo"
@@ -85,7 +128,7 @@
 
 
 
-
+    #! creating index files for the demo v-host
     - name: creating a phpinfo file in the documentroot
       template:
         src: "files/index.php.j2"
@@ -99,6 +142,8 @@
       template:
         src: "files/dummy.conf.j2"
         dest: "/usr/local/etc/httpd/extra/sites-available/demo.local.conf"
+
+    #! adding dummy host to local resolver
     - name: Editing hosts file for localdomain
       become: true
       lineinfile:
