--- a/playbook.yml
+++ b/playbook.yml
@@ -1,46 +1,33 @@
 - hosts: mac
 
+  roles: 
+    - mac.homebrew
+
   vars_files:
     - vars/env.yml
-  tasks:
-    #! Installing services
-    #? Install apache
-    - name: Install httpd
-      homebrew:
-        name: httpd
-        state: present
-        update_homebrew: true
-      tags:
+  vars: 
+    homebrew_installed_packages: 
+        - openldap
+        - libiconv
+        - mysql@{{ mysql_version }}
         - httpd
+        - php@7.2
+        - php@7.3
+        - php@7.4
+        - nvm
 
+    cask_packages:  # other desktop apps 
+        - visual-studio-code	
+        - sequel-pro
+        - google-chrome
+  tasks:
 
-    # ? install MYSQL
-    - name: Install Mysql
-      homebrew:
-        name: mysql@{{ mysql_version }}
-        state: present
-        update_homebrew: true
-      tags:
-        - mysql
-
-
-    #? install PHP 
-    - name: Install PHP
-      homebrew:
-        name: php@{{ php_version }}
-        state: present
-        update_homebrew: true
-      tags:
-        - PHP
-
-
-    #? install phpmyadmin 
-    - name: Install phpmyadmin
-      homebrew: 
-        name: phpmyadmin
-        state: present
-        update_homebrew: true
-
+    - name: Install GUI tools 
+      homebrew_cask: 
+            name: '{{ item }}'
+            state: present
+            install_options: 'appdir=/Applications'
+      with_items: '{{ cask_packages }}'
     #? removing the default conf file
     - name: deleting httpd.conf from  /usr/local/etc/httpd/httpd.conf
       file:
@@ -121,7 +108,7 @@
         state: directory
     #? Create document root 
     - name: create document root  for demo  host
-      
+
       file:
         path: "{{ document_root }}/demo"
         state: directory
